Changed class.newInstance() to class.getDeclaredConstructor().newInstance()